# wgpu-fun

./: Cargo.toml
src/: collison.rs  main.rs  renderer.rs
src/renderer/: buffer.rs
src/shaders/: shader.wgsl
